# genomemask

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: app.rs  cli.rs  error.rs  io.rs  lib.rs  main.rs  output.rs  twobit_writer.rs
src/commands/: mask.rs  mod.rs  ns.rs  seleno.rs
